2017-01-18	"No, I'm a frayed knot."  (6)

		include/innocent-pear/bbq.h ,
		include/innocent-pear/host/srsly.h :
		- added one more invertible operation

		test/test-orly-1.cc ,
		test/test-orly-2.cc :
		- rewrote somewhat, to make them (more) runnable under Salwan
		  et al.'s solve-vm.py  (-:
		  - may now accept one command line argument
		  - now uses printf(...) rather than std::cout << ...

2017-01-08	"No, I'm a frayed knot."  (5)

		include/innocent-pear/omg.h :
		- on x86-32 and x86-64, improved the generation of `verr' and
		  `verw' to suppress (e.g.) `movzwl' casts which come after
		- now uses ops::under_unpossible flag, removing need for
		  `bogo' function parameter

		include/innocent-pear/bbq.h :
		- added ops::under_unpossible flag

		include/innocent-pear/unpossible.h :
		- unpossible<...> now accepts an additional template
		  parameter (`class T')
		- added unpossible<...>::unpossible(.)

		include/innocent-pear/kthxbai.h :
		- now invokes unpossible<...> directly, not via omg<...>
		- moved `impl_n3' typedef into the only code block needing it

		NEWS :
		- fixed typo in 2016-12-28 entry

2017-01-07	"No, I'm a frayed knot."  (4)

		include/innocent-pear/dawg.h :
		- dawg_impl_2<...>::operator>>(.): added back (some)
		  randomization of character order, plus a bit more

		test/test-dawg-syn.cc ,
		test/test-dawg-syn.good :
		- added subtests for dawg<...>::operator>>(.)

		GNUmakefile :
		- now dumps smaller portions of compiled test binaries, again

2017-01-06	"No, I'm a frayed knot."  (3)

		share/innocent-pear/doge-01.cc :
		- reduced the scrambling around the getpagesize() and
		  mprotect(...) calls

		include/innocent-pear/dawg.h :
		- dawg_impl_2<...>::operator>>(.): removed randomization of
		  character order (for now)

2017-01-04	More syntactic sugar for strings.

		share/innocent-pear/omnomnom.lxx :
		- added $$"..." and $$L"..."

		test/test-dawg-syn.cc ,
		test/test-doge-with-dawg.cc ,
		test/test-yodawg-syn.cc :